k8s/apps/experiments/argo-rollout/blue-green/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-bluegreen-active
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo-bluegreen
    # This selector will be updated with the pod-template-hash of the current active ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 7bf84f9696

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-bluegreen-preview
  namespace:  default
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo-bluegreen
    # This selector will be updated with the pod-template-hash of the preview B/G version ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 789746c88d
